content/boundary/v0.13.x/content/docs/commands/storage-buckets/list.mdx
---
layout: docs
page_title: storage-buckets list - Command
description: |-
  The "storage-buckets list" command lists the storage buckets within a given scope or resource.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-10-29T10:56:20-04:00
last_modified: 2025-10-29T10:56:20-04:00
# END AUTO GENERATED METADATA
---

# storage-buckets list

Command: `storage-buckets list`

The `storage-buckets list` command lets you list the storage buckets within a given scope or resource.

## Example

This example lists all storage buckets within the scope `s_1234567890`.
The `recursive` option means Boundary runs the operation recursively on any child scopes, if applicable:

```shell-session
$ boundary storage-buckets list -scope-id s_1234567890 -recursive
```

## Usage

<CodeBlockConfig hideClipboard>

```shell-session
$ boundary storage-buckets list [options] [args]
```

</CodeBlockConfig>

### Command options

- `-filter=<string>` - If set, Boundary filters the list operation before the results are returned.
The filter operates against each item in the list.
We recommend that you use single quotes, because the filters contain double quotes.
Refer to the [Filter resource listings documentation](/boundary/docs/concepts/filtering/resource-listing) for more details.
- `recursive` - If set, runs the list operation recursively on any child scopes, if the type supports it.
The default value is `false`.
- `scope-id=<string>` - The scope from which to list storage buckets.
The default value is `global`.
You can also specify this value using the **BOUNDARY_SCOPE_ID** environment variable.

@include 'cmd-option-note.mdx'